--- a/Exercises/ShellsortSeries.html
+++ b/Exercises/ShellsortSeries.html
@@ -3,6 +3,7 @@
 <head>
   <title>OpenDSA Exercise: Legal Shellsort Series</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
   <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
