--- a/AV/mergesort-av.html
+++ b/AV/mergesort-av.html
@@ -213,7 +213,7 @@ form {
 	  var newHeight = 215 + rowHeight * totalDepth;
 	  $('#container').height(newHeight);
 	  
-	  mergesort(av, arr, theArray, 1, 1);
+	  mergesort(av, arr, 1, 1);
 
 	  // END MERGESORT IMPLEMENTATION
 	  
@@ -228,18 +228,43 @@ form {
   var blockWidth = 47;
   var treeDepth = 0;
   
+  // Extend the JSAV AV array to have the slice functionality of JavaScript arrays
+  JSAV._types.ds.AVArray.prototype.slice = function(start, end) {
+	
+	var array = new Array();
+	
+	for (var i = 0; i < (end - start); i++)
+	{
+	  array[i] = this.value(start + i);
+	}
+	
+	return array;
+  }
+  
+  // Convenience function for setting another type of highlight
+  // (will be used for showing which elements will be compared during sort)
+  var setBlue = function(arr, index) {
+    arr.css(index, {"background-color": "#ddf" });
+  };
+  
+  // Convenience function for setting another type of highlight
+  // (will be used for showing which elements have already been merged back together)
+  var setGray = function(arr, index) {
+    arr.css(index, {"background-color": "#c0c0c0" });
+  };
+  
   /* 
    * Recursively splits input array until single element arrays are achieved, arrays are then merged back together in sorted order
    * 
    * av - a JSAV container
    * arr - a JSAV array
-   * array - JavaScript array used to create future JSAV subarrays
    * level - the current depth of the recursion
    * arrNum - the column number of the current array
    */
-  function mergesort(av, arr, array, level, arrNum) {
+  function mergesort(av, arr, level, arrNum) {
     
-	var arrLen = array.length;
+	var arrLen = arr.size();
+	var returnArr = arr;
   
     // Dynamically determine the canvas width using the centered alignment of the first block
 	if (level == 1)
@@ -253,29 +278,30 @@ form {
 	  
 	  // The depth of the recursion is (1 + log base 2 of the length of the original array)
 	  treeDepth = Math.ceil(Math.log(arrLen) / Math.log(2)) + 1;
+	  
+	  setPosition(returnArr, level, arrNum, arrLen);
+	  
+	  av.umsg("Select the entire array");
 	}
 	
-	av.step();
-
-	// Highlight the array (to show that the entire array is about to be operated on)
-	for (var i = 0; i < arrLen; i++)
+	arr.highlight();
+	
+	
+	if (arrLen == 1)
 	{
-	  arr.highlight([i]);
+	  // Base case
+	  av.umsg("An array of length 1 cannot be split, ready for merge");
+	  av.step();
+	  arr.unhighlight();
 	}
-	
-	av.step();
-	
-	// Unhighlight the array
-	for (var i = 0; i < arrLen; i++)
+	else if (arrLen > 1)
 	{
-	  arr.unhighlight([i]);
-	}
+	  // General recursive case
+	  av.step();
 	
-	var returnArr = array;
+	  av.umsg("Split the selected array (as evenly as possible)");
+	  arr.unhighlight();
 	
-	// General recursive case
-	if (arrLen > 1)
-	{
 	  // Find the middle of the array, if can't split evenly make the first array larger
 	  var midPoint = Math.ceil(arrLen / 2);
 	
@@ -284,17 +310,21 @@ form {
 	  var childArr2Num = arrNum * 2;
 	
 	  // Create and display sub-arrays
-	  var subArr1 = array.slice(0, midPoint);
+	  var subArr1 = arr.slice(0, midPoint);
 	  var avSubArr1 = av.ds.array(subArr1, {indexed: true});
 	  setPosition(avSubArr1, level, childArr1Num, subArr1.length);
 	  
-	  var subArr2 = array.slice(midPoint, arrLen);
+	  var subArr2 = arr.slice(midPoint, arrLen);
 	  var avSubArr2 = av.ds.array(subArr2, {indexed: true});
 	  setPosition(avSubArr2, level, childArr2Num, subArr2.length);
 	
+	  av.step();
+	
 	  // Split both sub-arrays
-	  var retArr1 = mergesort(av, avSubArr1, subArr1, level, childArr1Num);
-	  var retArr2 = mergesort(av, avSubArr2, subArr2, level, childArr2Num);
+	  av.umsg("Select the left subarray");
+	  var retArr1 = mergesort(av, avSubArr1, level, childArr1Num);
+	  av.umsg("Select the right subarray");
+	  var retArr2 = mergesort(av, avSubArr2, level, childArr2Num);
 	  
 	  returnArr = merge(av, retArr1, retArr2, level - 1, arrNum);
 	}
@@ -313,49 +343,90 @@ form {
    */
   function merge(av, arr1, arr2, level, arrNum)
   {
-	av.step();
+	av.umsg("Merge selected arrays back together, in sorted order");
+	
+	//av.step();
+	
+	var row = (2 * treeDepth) - level;
+	
+	retArrLen = arr1.size() + arr2.size();
   
-    var retArr = new Array();
-	var i = 0;
-    var pos1 = 0;
+    var retArr = new Array(retArrLen);
+	var avRetArr = av.ds.array(retArr, {indexed: true});
+	setPosition(avRetArr, row, arrNum, retArrLen);
+	
+	var pos1 = 0;
 	var pos2 = 0;
+	var i = 0;
+	
+	arr1.highlight();
+	arr2.highlight();
+	av.step();
+	
+	arr1.unhighlight();
+	arr2.unhighlight();
 	
 	// Merge the two arrays together, in sorted order 
-	while (pos1 < arr1.length || pos2 < arr2.length)
+	while (pos1 < arr1.size() || pos2 < arr2.size())
 	{
-	  if (arr1[pos1] <= arr2[pos2] || pos2 == arr2.length)
+	  if (pos1 == arr1.size() || pos2 == arr2.size())
 	  {
-	    retArr[i] = arr1[pos1];
+	    av.umsg("When one list becomes empty, copy all values from the remaining array into the sorted array");
+	  }
+	  else
+	  {
+	    av.umsg("Select the smallest value from the front of each list (excluding values already in the sorted array)");
+	  
+	    if (pos1 < arr1.size())
+	    {
+	      arr1.highlight(pos1);
+	    }
+	    if (pos2 < arr2.size())
+	    {
+	      arr2.highlight(pos2);
+	    }
+	  
+	    av.step();
+	    av.umsg("Select the minimum of the two values");
+	  }
+	  
+	  if (pos1 < arr1.size() && (arr1.value(pos1) <= arr2.value(pos2) || pos2 == arr2.size()))
+	  {
+	    setBlue(arr1, pos1);
+		av.step();
+		setGray(arr1, pos1);
+		retArr[i] = arr1.value(pos1);
 		pos1++;
 	  }
 	  else
 	  {
-	    retArr[i] = arr2[pos2];
+	    setBlue(arr2, pos2);
+		av.step();
+		setGray(arr2, pos2);
+		retArr[i] = arr2.value(pos2);
 		pos2++;
 	  }
 	  i++;
+	  
+	  // Hides the previous merged array before creating a new one with the correct values
+	  avRetArr.hide();
+	  avRetArr = av.ds.array(retArr, {indexed: true});
+	  setPosition(avRetArr, row, arrNum, retArrLen);
+	  //avRetArr.value(i, arr2.value(pos2)); // THIS BREAKS THE POSITIONING
+	  
+	  av.umsg("Add the selected value to the sorted array");
+	  av.step();
 	}
-	
-	var row = (2 * treeDepth) - level;
-	
-	var avRetArr = av.ds.array(retArr, {indexed: true});
-	setPosition(avRetArr, row, arrNum, retArr.length);
-	
-	// Highlight the array (to show that the entire array is about to be operated on)
-	for (var i = 0; i < retArr.length; i++)
-	{
-	  avRetArr.highlight([i]);
-	}
+	arr1.unhighlight();
+	arr2.unhighlight();
+	av.umsg("Finished merging");
 	
 	av.step();
 	
-	// Unhighlight the array
-	for (var i = 0; i < retArr.length; i++)
-	{
-	  avRetArr.unhighlight([i]);
-	}
+    av.clearumsg();
+	avRetArr.unhighlight();
 	
-	return retArr;
+	return avRetArr;
   }
   
   /*
@@ -391,7 +462,7 @@ form {
 	var top = rowHeight * (row - 1);
 	
 	// Set the top and left values so that all arrays are spaced properly
-	arr.element.css({"left": left, "top": top + "px"});
+	arr.element.css({"left": left, "top": top});
 	
 	// Round the corners of individual blocks 
 	// NOTE: Works when you skip to the end but not when you advance step by step
