--- a/AV/hashing/hash.html
+++ b/AV/hashing/hash.html
@@ -48,6 +48,14 @@ div h1 {
   text-align: center;
 }
 
+.jsavarray {
+   padding-left:0;
+   text-align: center;
+   position: absolute;
+   left: 350px;
+}
+
+
 p.jsavoutput.jsavline {
   height: 30px;
   margin: 0;
