--- a/AV/Development/binarySearchPRO.html
+++ b/AV/Development/binarySearchPRO.html
@@ -4,9 +4,12 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Binary Search</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" /> -->
-  <link rel="stylesheet" href="proficiency.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+<!--  <link rel="stylesheet" href="proficiency.css" type="text/css" /> -->
   <style>
+    #container {
+      width: 800px;
+    }
     .jsavnode {
       width: 36px;
       height: 36px;
@@ -18,12 +21,28 @@
 </head>
 
 <body>
-  <div id="jsavcontainer">
-    <h1 class="exerciseTitle"></h1>
+<div id="container">
+  <table class="proHeaderTable">
+    <tr>
+      <td class="headerLeft">
+      </td>
+      <td class="headerCenter">
+        <p class="jsavexercisecontrols"></p>
+      </td>
+      <td class="headerRight">
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
+      </td>
+    </tr>
+  </table>
+
+  <form class="avcontainer">
     <p class="instructLabel"></p>
     <p class="instructions"></p>
-    <p align="center" class="jsavexercisecontrols"></p>
-  </div>
+    <p><span class="jsavscore"></span></p>
+    <div id="arrays" class="jsavcanvas"></div>
+  </form>
+</div> <!-- container -->
 
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
