--- a/Exercises/Design/DsgnMCQadtfrm.html
+++ b/Exercises/Design/DsgnMCQadtfrm.html
@@ -14,10 +14,10 @@
       <p class="question"> An ADT is a form of: </p>
       <div class="solution"><var>"Abstraction"</var></div>
       <ul class="choices">
-	<li><var>" Metaphor."</var> </li>
-	<li><var>"Simile."</var></li>
-        <li><var>" Programming."</var></li>
-        <li><var>"Design."</var></li>
+	<li><var>"Metaphor"</var> </li>
+	<li><var>"Simile"</var></li>
+        <li><var>"Programming"</var></li>
+        <li><var>"Design"</var></li>
       </ul>
       <div class="hints">
       </div>
