--- a/AV/Searching/binarySearchPRO.html
+++ b/AV/Searching/binarySearchPRO.html
@@ -5,7 +5,7 @@
   <title>Binary Search</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-<!--  <link rel="stylesheet" href="proficiency.css" type="text/css" /> -->
+ <link rel="stylesheet" href="../Development/proficiency.css" type="text/css" />
   <style>
     #container {
       width: 850px;
