--- a/AV/Searching/binarySearchPRO.html
+++ b/AV/Searching/binarySearchPRO.html
@@ -5,7 +5,7 @@
   <title>Binary Search</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
- <link rel="stylesheet" href="../Development/proficiency.css" type="text/css" />
+  <link rel="stylesheet" href="../Development/proficiency.css" type="text/css" />
   <style>
     #container {
       width: 850px;
@@ -16,10 +16,6 @@
     }
     .jsavvalue {
       height: 36px;
-    }
-    .jsavcode {
-      border: 1px solid;
-      border-color: white;
     }
   </style>
 </head>
@@ -48,13 +44,13 @@
   </form>
 </div> <!-- container -->
 
-  <script src="../../lib/jquery.min.js"></script>
-  <script src="../../lib/jquery-ui.min.js"></script>
-  <script src="../../JSAV/lib/jquery.transit.js"></script>
-  <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
-  <script src="../../lib/odsaUtils.js"></script>
-  <script src="../../lib/odsaAV-min.js"></script>
-  <script src="binarySearchPRO.js"></script>
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
+<script src="../../JSAV/lib/jquery.transit.js"></script>
+<script src="../../JSAV/lib/raphael.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
+<script src="../../lib/odsaUtils-min.js"></script>
+<script src="../../lib/odsaAV-min.js"></script>
+<script src="binarySearchPRO.js"></script>
 </body>
 </html>
