--- a/AV/Sorting/selectionsortAV.html
+++ b/AV/Sorting/selectionsortAV.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     #container {
       width: 780px;
-      height: 655px;
+      height: 620px;
     }
   </style>
 </head>
@@ -18,27 +19,24 @@
   <table class="headerTable">
     <tr>
       <td class="headerLeft"></td>
-      <td class="headerCenter avTitle">
-        Selection Sort Visualization
-      </td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about"/>
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
 
   <form id="ssperform">
     <p>
-      <input id="run" type="button" name="run" value="Run" />
-      <input id="reset" type="button" name="reset" value="Reset" />
-      <label for="arraysize">&nbsp;List size:&nbsp;</label>
+      <input id="run" type="button" name="run"/>
+      <input id="reset" type="button" name="reset"/>
+      <label id="arraysizeLabel" for="arraysize"></label>
       <select id="arraysize"></select>
     </p>
     <p>
-      <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text"
-         placeholder="Type space-separated values, or hit 'run' to use random values" />
+      <label id="arrayValuesLabel" for="arrayValues"></label>
+      <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
   <div class="avcontainer">
@@ -55,7 +53,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../sortUtils.js"></script>
 <script src="selectionsortAV.js"></script>
 </body>
 </html>
