--- a/Exercises/Sorting/FindInversionsPRO.html
+++ b/Exercises/Sorting/FindInversionsPRO.html
@@ -20,22 +20,22 @@ Written by Gayathri Subramanian and Cliff Shaffer
 
 <body>
 <script>
-var
-  jsav,    // The JSAV object
-  jsavArr, // The JSAV array
-  answer;  // The correct answer
+var av,     // The JSAV object
+    arr,    // The JSAV array
+    answer; // The correct answer
 
-var initJSAV = function (a) {
+function initJSAV(a) {
   var i, j;
-  jsav = new JSAV("jsav", {"animationMode": "none"});
-  jsavArr = jsav.ds.array(JSAV.utils.rand.numKeys(0, 999, a),
-                          {indexed: true, center: false});
+  av = new JSAV("jsav", {"animationMode": "none"});
+  arr = av.ds.array(JSAV.utils.rand.numKeys(0, 999, a),
+                    {indexed: true, center: false});
+  av.recorded();
   
   // Compute the answer
   answer = 0;
-  for (i = 1; i < jsavArr.size(); i++) {
+  for (i = 1; i < arr.size(); i++) {
     for (j = 0; j < i; j++) {
-      if (jsavArr.value(i) < jsavArr.value(j)) {
+      if (arr.value(i) < arr.value(j)) {
         answer++;
       }
     }
@@ -43,7 +43,7 @@ var initJSAV = function (a) {
 };
 
 // Return the computed Answer
-var genAnswer = function () {
+function genAnswer() {
   return answer;
 };
 </script>
