--- a/AV/Development/externalReplacementSelectionPRO.html
+++ b/AV/Development/externalReplacementSelectionPRO.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Replacement Selection</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-    <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="externalReplacementSelectionPRO.css" />
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Replacement Selection Proficiency Exercise</title>
+
+
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
+  <link rel="stylesheet" href="externalReplacementSelectionPRO.css" />
   </head>
   <body>
     <div id="container">
@@ -44,14 +47,14 @@
         </div>
       </form>
     </div>
-    <script src="../../lib/jquery.min.js"></script>
-    <script src="../../lib/jquery-ui.min.js"></script>
-    <script src="../../JSAV/lib/jquery.transit.js"></script>
-    <script src="../../JSAV/lib/raphael.js"></script>
-    <script src="../../JSAV/build/JSAV-min.js"></script>
-    <script src="../../JSAV/extras/binaryheap.js"></script>
-    <script src="../../lib/odsaUtils-min.js"></script>
-    <script src="../../lib/odsaAV-min.js"></script>
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
+<script src="../../JSAV/lib/jquery.transit.js"></script>
+<script src="../../JSAV/lib/raphael.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
+<script src="../../JSAV/extras/binaryheap.js"></script>
+<script src="../../lib/odsaUtils-min.js"></script>
+<script src="../../lib/odsaAV-min.js"></script>
     <script src="ClickHandler.js"></script>
     <script src="externalReplacementSelectionPRO.js"></script>
   </body>
