--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ShellSort AV</title>
+  <title>ShellSort Visualization</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     #container {
       width: 780px;
@@ -18,34 +19,29 @@
   <table class="headerTable">
     <tr>
       <td class="headerLeft">
-        <input type="button" id="help" name="help" value="Help" />
+        <input type="button" id="help" name="help" />
       </td>
-      <td class="headerCenter avtitle">
-        Shellsort Visualization
-      </td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
+        <input type="button" id="about" name="about" />
         <a id="settings" class="jsavsettings" href="#">Settings</a>
       </td>
     </tr>
   </table>
 
   <form id="ssperform">
-    <p><label for="increments">Type an increment series or
-                               use the given default:</label>
-       <input id="increments" size="30" name="increments" type="text"
-           value="4 2 1" />
+    <p><label id="incrementsLabel" for="increments"></label>
+       <input id="increments" size="30" name="increments" value="4 2 1" type="text" />
     </p>
     <p>
-      <input type="button" id="run" name="run" value="Run" />
-      <input type="button" id="reset" name="reset" value="Reset" />
-      <label for="arraysize">&nbsp;Array size:&nbsp;</label>
+      <input id="run" type="button" name="run" />
+      <input id="reset" type="button" name="reset" />
+      <label id="arraysizeLabel" for="arraysize"></label>
       <select id="arraysize"></select>
     </p>
     <p>
-      <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text"
-         placeholder="Type space-separated values, or hit 'run' to use random values" />
+      <label id="arrayValuesLabel" for="arrayValues"></label>
+      <input id="arrayValues" size="60" name="arrayValues" type="text" />
     </p>
   </form>
   <div class="avcontainer">
@@ -62,7 +58,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../sortUtils.js"></script>
 <script src="shellsortCODE.js"></script>
 <script src="shellsortAV.js"></script>
 </body>
